bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/different_scopes_frame.error_regex
Frame named: \[extra_model::sub_added_frame\] has a different scope in its name and its base_frame: \[simple_model::frame\].
